--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   </head>
   <style>
     @font-face {
-      font-family: Renner;
-      src: url('src/assets/fonts/renner-VF.woff2') format('woff-variations');
-      font-weight: normal;
-      font-style: normal;
+      font-family: compressa;
+      src: url('src/assets/fonts/compressa.woff2') format('woff-variations');
     }
   </style>
   <body>
